[package]
name = "mdeditor"
version = "0.1.5"
description = "Windows-first offline WYSIWYG Markdown editor"
authors = ["22B Labs"]
edition = "2021"

[lib]
name = "mdeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
